Projet GL/Projet_GL/src/test/deca/syntax/valid/hello.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    hello.res
//
// Historique:
//    cree le 01/01/2023

{
 int x ;
 x=readInt() ;
 println(0.5*(x*x)) ;
 }
