Projet GL/Projet_GL/src/test/deca/syntax/invalid/public.deca
// test public field

// Historique : cree le 22/01/2023

class A{
    public int a;
}